<resources>
    <string name="app_name">Oblig1</string>
    <string name="center_text">Quiz it up!</string>
    <string name="quiz_button">Start Quiz!</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_database">Database</string>
    <string name="database_button">Database</string>
    <string name="add_button">Add</string>
    <string name="title_activity_add_photo">AddPhoto</string>
    <string name="library">Library</string>
    <string name="take_photo">Camera</string>
    <string name="new_photo_name">Name</string>
    <string name="quiz_header">Who is this?</string>
    <string name="add_header">Add Photo</string>
    <string name="submit_button">Submit</string>
    <string name="toolbar_home">Home</string>
    <string name="toolbar_settings">Settings</string>
    <string name="title_activity_toolbar">Toolbar</string>
    <string name="settings_button">Settings</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="new_owner">New Owner:</string>
    <string name="save_button">Save</string>
    <string name="preferences_header">Owner</string>
    <string name="default_name">No owner</string>
</resources>
